@@ -1852,7 +1852,7 @@ def test_orbit_setup():
     assert numpy.fabs(o.W()+25.) < 10.**-13., 'Orbit W setup does not agree with o.W()'
     #Radec w/ default and obs=Orbit
     o= Orbit([120.,60.,2.,0.5,0.4,30.],radec=True)
-    obs= Orbit([1.,-10.1/220.,224./220,0.025/8.,6.7/220.,0.])
+    obs= Orbit([1.,-11.1/220.,232.24/220,0.025/8.,7.25/220.,0.])
     assert numpy.fabs(o.ra(obs=obs)-120.) < 10.**-13., 'Orbit ra setup does not agree with o.ra()'
     assert numpy.fabs(o.dec(obs=obs)-60.) < 10.**-13., 'Orbit dec setup does not agree with o.dec()'
     assert numpy.fabs(o.dist(obs=obs)-2.) < 10.**-13., 'Orbit dist setup does not agree with o.dist()'
