@@ -6,6 +6,11 @@ v1.4 (????)
   components (e.g., a bar) to previously defined potentials (which may
   be lists themselves): new_pot= [pot,bar_pot].
 
+- Defined Orbit initialization without any arguments (or, more
+  generally, without specifying the vxvv initial phase-space input) to
+  return an Orbit instances representing the Sun. Can therefore setup
+  an Orbit representing the Sun's as o= Orbit().
+
 - Add warnings/verbose configuration parameter to set level of
   verbosity of non-crucial warnings (like: "Using C implementation to
   integrate orbits").
